--- a/app/src/content/docs/index.mdx
+++ b/app/src/content/docs/index.mdx
@@ -1,36 +1,27 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Astro micfro-frontends
+description: Set up micro-frontends with Astro and remote EcmaScrpt Modules.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
+  tagline: Set up micro-frontends with Astro and remote EcmaScrpt Modules.
   actions:
-    - text: Example Guide
+    - text: Read the docs
       link: /guides/example/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+### Features
 
-## Next steps
+import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+  <Card title="Zero complexity">No need for micro-frontend plugins or frameworks.</Card>
+  <Card title="Modern web-standards">
+    Based on modern web standards like remote Ecmascript Modules and Import maps.
+  </Card>
+  <Card title="Shared dependencies">
+    Share dependencies across micro-frontends by using <a>esm.sh</a>.
+  </Card>
+  <Card title="Compose">Client-side and server-side composition.</Card>
 </CardGrid>
