--- a/app/src/content/docs/index.mdx
+++ b/app/src/content/docs/index.mdx
@@ -17,9 +17,7 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid stagger>
   <Card title="Zero complexity">No need for micro-frontend plugins or frameworks.</Card>
-  <Card title="Modern web-standards">
-    Based on modern web standards like remote Ecmascript Modules and Import maps.
-  </Card>
+  <Card title="Modern standards">Based on modern web standards like remote Ecmascript Modules and Import maps.</Card>
   <Card title="Shared dependencies">
     Share dependencies across micro-frontends by using <a>esm.sh</a>.
   </Card>
